--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "new",
+  "name": "react-practice",
   "version": "1.0.0",
-  "description": "",
+  "description": "Used for React practice when working along with level up tuts",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
@@ -18,5 +18,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
